# Futureboard

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GEMINI.md  LICENSE  NOTICE.md  PATCHED.md  README.md  SKILL.md  TRADEMARKS.md  UI.md  bunfig.toml  deny.toml  handoff.md  package.json  version.json
apps/floatingwindow/: Cargo.toml  build.rs
apps/floatingwindow/src/: app.rs  displays.rs  fonts.rs  ipc.rs  lib.rs  main.rs  protocol.rs  theme.rs  window_manager.rs
apps/floatingwindow/src/windows/: analyzer.rs  midi.rs  mixer.rs  mod.rs  plugin_placeholder.rs
apps/native/: Cargo.toml  build.rs
apps/native/apakinstaller/: Cargo.toml  apak.secret.example  build.rs
apps/native/apakinstaller/src/: cli.rs  gui.rs  lib.rs  main.rs  platform.rs
apps/native/apakinstaller/windows/: apak.manifest  apak_tools.rc  apakinstaller.manifest  makeapak.manifest
apps/native/livestage/: Cargo.toml
apps/native/src/: app.rs  main.rs  window.rs
apps/native/studio/: Cargo.toml  build.rs
apps/native/studio/src/: app.rs  audio_state.rs  exclusive_edition.rs  main.rs  window.rs
crates/BuiltinAudioPlugins/: Cargo.toml  README.md
crates/BuiltinAudioPlugins/crates/ampstage/: Cargo.toml
crates/BuiltinAudioPlugins/crates/builtin_dsp_core/: Cargo.toml
crates/BuiltinAudioPlugins/crates/builtin_ui_embed/: Cargo.toml
crates/BuiltinAudioPlugins/crates/c1073/: Cargo.toml
crates/BuiltinAudioPlugins/crates/compresser/: Cargo.toml
crates/BuiltinAudioPlugins/crates/drumsampler/: Cargo.toml
crates/BuiltinAudioPlugins/crates/echospace/: Cargo.toml
crates/BuiltinAudioPlugins/crates/equz8/: Cargo.toml
crates/BuiltinAudioPlugins/crates/fa2a/: Cargo.toml
crates/BuiltinAudioPlugins/crates/fa76/: Cargo.toml
crates/BuiltinAudioPlugins/crates/guitarstage/: Cargo.toml
crates/BuiltinAudioPlugins/crates/meowsyn/: Cargo.toml
crates/BuiltinAudioPlugins/crates/nuadee/: Cargo.toml
crates/BuiltinAudioPlugins/crates/opensampler/: Cargo.toml
crates/BuiltinAudioPlugins/crates/rodharerist/: Cargo.toml  build.rs
crates/BuiltinAudioPlugins/crates/verbspace/: Cargo.toml
crates/BuiltinAudioPlugins/crates/wrapsynth/: Cargo.toml
crates/BuiltinAudioPlugins/src/: lib.rs
crates/SphereAudioPlugins/: Cargo.toml  README.md
crates/SphereAudioPlugins/src/: lib.rs
crates/SphereAudioProcessor/: Cargo.toml  build.rs
crates/SphereAudioProcessor/src/: ffi.rs  lib.rs
crates/SphereDirectAudioEngine/: Cargo.toml  build.rs
crates/SphereDirectAudioEngine/src/: asio_registry.rs  audio_file.rs  audio_graph.rs  audio_source.rs  command.rs  engine.rs  error.rs  forensic_trace.rs  graveyard.rs  input_ring.rs  latency_graph.rs  lib.rs  main.rs  native.rs  plugin_bridge.rs  recording.rs  runtime.rs  streaming_source.rs  tempo_map.rs  time_signature_map.rs  transport.rs  types.rs  vst3_processor.rs
crates/SphereDirectAudioEngine/vst3bridge/: EDITORHOST_ALIGNMENT.md
crates/SphereDiscordRPC/: Cargo.toml  README.md
crates/SphereDiscordRPC/src/: lib.rs
crates/SphereEncoder/: Cargo.toml
crates/SphereEncoder/src/: flac.rs  format.rs  lib.rs  metadata.rs  mp3.rs  wav.rs
crates/SphereGraphicEngine/: Cargo.toml
crates/SphereGraphicEngine/src/: lib.rs
crates/SphereMidiService/: Cargo.toml
crates/SphereMidiService/src/: lib.rs
crates/SpherePackageInstaller/: Cargo.toml
crates/SpherePackageInstaller/src/: lib.rs
crates/SpherePlatform/: Cargo.toml
crates/SpherePlatform/src/: dialog.rs  elevation.rs  lib.rs
crates/SpherePluginHost/: Cargo.toml  build.rs
crates/SpherePluginHost/src/: au_scanner.rs  audio_bridge.rs  builtin.rs  editor_quirk.rs  editor_window.rs  instance_manager.rs  lib.rs  native_editor.rs  plugin_bridge_sink.rs  plugin_db.rs  plugin_host_client.rs  plugin_host_lifecycle.rs  plugin_host_logging.rs  plugin_host_main_window.rs  plugin_host_preview.rs  plugin_host_spawn_config.rs  preset.rs  process_manager.rs  registry.rs  scanner.rs  types.rs
crates/SpherePluginHost/tests/: editor_resize_contract.rs  host_ipc_roundtrip.rs
crates/SpherePluginHost/vst3backend/: CMakeLists.txt  plugin_host.rc  plugin_host_version.rc
crates/SphereStemExtractor/: Cargo.toml
crates/SphereStemExtractor/src/: device.rs  download.rs  error.rs  extractor.rs  lib.rs  model.rs  params.rs  progress.rs  stems.rs
crates/SphereUIComponents/: Cargo.toml
crates/SphereUIComponents/examples/: osr_editor_probe.rs
crates/SphereUIComponents/src/: account.rs  app_state.rs  assets.rs  audio_routing.rs  boot.rs  color.rs  custom_cursors.rs  device_registry.rs  edition.rs  embedded_assets.rs  feeds.rs  forensic_trace.rs  frame_scheduler.rs  i18n.rs  keymap.rs  layout.rs  lib.rs  loading_session.rs  menu.rs  midi_devices.rs  midi_input.rs  native_macos_menu.rs  overlay.rs  paths.rs  perf.rs  platform_chrome.rs  pre_studio_install.rs  session_shutdown.rs  settings.rs  shutdown.rs  soundfont_player.rs  splash.rs  startup.rs  tap_tempo.rs  theme.rs  user_manual.rs  welcome.rs  window_lifecycle.rs  window_position.rs
crates/SphereUIComponents/tests/: cross_process_content_hwnd.rs
crates/SphereWebAudioCore/: Cargo.toml  LICENSE
crates/SphereWebAudioCore/src/: buffer.rs  commands.rs  engine.rs  error.rs  events.rs  graph.rs  ids.rs  lib.rs  meters.rs  mixer.rs  params.rs  wasm_api.rs
crates/SphereWebView/: Cargo.toml  README.md
crates/SphereWebView/examples/: install_cef.rs
crates/SphereWebView/src/: client.rs  installer.rs  lib.rs  osr.rs  runtime.rs  scheme.rs
crates/gpui/: Cargo.toml  NOTICE.md  PATCHED.md
crates/gpui/examples/: image_gallery.rs  text.rs
crates/gpui/src/: executor.rs  platform.rs  platform_scheduler.rs  svg_renderer.rs  window.rs
extensions/template-react/: Cargo.toml  sphere-extension.json
frameworks/SphereWebAudioCore/: Cargo.toml
frameworks/SphereWebAudioCore/src/: buffer.rs  engine.rs  events.rs  lib.rs  mixer.rs  transport.rs  wasm_api.rs
xtask/: Cargo.toml  README.md
xtask/src/: cargo_build.rs  cef.rs  main.rs  metadata.rs  package.rs  platform.rs  plugins.rs  staging.rs  validation.rs
(+811 files in other folders)
