[workspace]
resolver = "3"
members = [
    "apps/native",
    "crates/*",
]
exclude = [
    "extentions",
    "extentions/template",
    "extentions/template-react",
    "extentions/template-vue",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package.futureboard-core]
opt-level = "s"
strip = "debuginfo"
