[workspace]
resolver = "3"
members = [
    "apps/native",
    "crates/*",
]
exclude = [
    # JS/Rust extension templates — built independently, not part of the workspace.
    "extensions",
    "extensions/template",
    "extensions/template-react",
    "extensions/template-vue",
    # Quarantined experimental/placeholder crates (no implementation yet).
    # See ARCHITECTURE.md → "Experimental crates policy". Promote back into the
    # workspace by removing the corresponding line once a crate has real content.
    "crates/SphereEncoder",
    "crates/SphereExtensionHost",
    "crates/SphereMediaUtils",
    "crates/SphereNoiseRemover",
    "crates/SphereSettings",
    "crates/SphereStemExtractor",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package.futureboard-core]
opt-level = "s"
strip = "debuginfo"
