[package]
name = "futureboard_native"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "futureboard_native"
path = "src/main.rs"

[dependencies]
gpui = "0.2.2"
sphere_ui_components = { path = "../../crates/SphereUIComponents" }
# Native audio engine. The crate also exposes an N-API surface for Electron;
# we only use its `native` facade from here (no NAPI calls in this binary).
sphere-direct-audio-engine = { path = "../../crates/SphereDirectAudioEngine" }

[features]
default = []
gpu-renderer = ["sphere_ui_components/gpu-renderer"]

[build-dependencies]
embed-resource = "3.0"
