[package]
name = "futureboard_native"
version = "2026.5.31"
edition = "2021"
build = "build.rs"

[[bin]]
name = "futureboard_native"
path = "src/main.rs"

[dependencies]
# GPUI core.
#
# The root workspace should define gpui with:
#   default-features = false
#   features = ["font-kit"]
#
# Do NOT enable wayland/x11 here globally, otherwise Windows builds may pull
# Linux-only dependencies into the graph.
gpui.workspace = true

sphere_ui_components.workspace = true

# Native audio engine.
#
# The workspace dependency should keep:
#   default-features = false
#
# This prevents the standalone native binary from linking against Node/N-API
# symbols. Electron can enable N-API from its own crate/build path instead.
sphere-direct-audio-engine.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
# Windows GPUI backend.
gpui_windows.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# macOS GPUI backend.
gpui_macos.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# Linux GPUI backend.
#
# wayland/x11 are Linux-only, so enable them only here.
gpui = { workspace = true, features = ["wayland", "x11"] }
gpui_linux.workspace = true

[features]
default = ["gpu-renderer"]
gpu-renderer = ["sphere_ui_components/gpu-renderer"]

[build-dependencies]
embed-resource.workspace = true
