[package]
name = "sphere-audio-plugins"
version = "0.1.0"
edition = "2021"
description = "SphereAudioPlugins — built-in and extension audio plugin DSP framework for Futureboard Studio"

[lib]
name = "sphere_audio_plugins"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
