[package]
name = "sphere-audio-processor"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Central audio processing abstractions for Futureboard Studio"
license.workspace = true

[lib]
name = "SphereAudioProcessor"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
log.workspace = true

[build-dependencies]
cc.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
