[package]
name    = "sphere-direct-audio-engine"
version = "0.1.0"
edition = "2021"
description = "SphereDirectAudioEngine — native Rust audio backend for Futureboard Studio"

# ── Library target (N-API native module for Electron) ────────────────────────
# "cdylib"  → .node addon loaded by Node.js / Electron
# "rlib"    → static Rust library so [[bin]] targets in this crate can link it
[lib]
name       = "DAUx"
crate-type = ["cdylib", "rlib"]

# ── CLI test harness (cargo run --bin sphere-audio-test) ─────────────────────
[[bin]]
name = "sphere-audio-test"
path = "src/bin/sphere_audio_test.rs"
required-features = ["audio-test-bin"]

# ── Runtime dependencies ──────────────────────────────────────────────────────
[dependencies]
# N-API binding framework (Electron / Node.js native addon)
napi        = { version = "2", features = ["napi4"], optional = true }
napi-derive = { version = "2", optional = true }

# Cross-platform audio I/O (WASAPI shared on Win, CoreAudio on Mac, ALSA on Linux)
cpal = "0.15"

# Lock-free channel for control→audio thread commands
crossbeam-channel = "0.5"

# Parking-lot mutexes (panic-safe, no poisoning)
parking_lot = "0.12"

# JSON for project snapshot serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sphere-audio-plugins = { path = "../SphereAudioPlugins" }

# Multi-format audio decoder (MP3, FLAC, OGG Vorbis, WAV, AIFF).
# WAV is also decoded by our own hand-written parser (fast, zero deps);
# symphonia handles the compressed and container formats.
# Memory-map large WAV files for playback without decoding into RAM.
memmap2 = "0.9"

symphonia = { version = "0.5", default-features = false, features = [
    "wav",      # WAV/RIFF container
    "pcm",      # PCM codec (WAV)
    "aiff",     # AIFF container
    "mp3",      # MP3 format + codec (bundle)
    "flac",     # FLAC format + codec (bundle)
    "ogg",      # OGG container
    "vorbis",   # Vorbis codec (for OGG Vorbis)
] }

# ── Windows-only: raw WASAPI exclusive mode + MMCSS ──────────────────────────
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_Media",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Devices_Properties",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
]}

[build-dependencies]
napi-build = "2"
cc = "1"
pkg-config = "0.3"

[features]
# Default build is native/rlib-safe for Studio workspace builds.
default = []

# Build the N-API surface (`SphereDirectAudioEngine` JS class, Js* types).
napi = ["dep:napi", "dep:napi-derive"]

# Opt-in standalone CLI target. Workspace builds skip this so the binary does
# not try to link N-API symbols outside a Node/Electron host.
audio-test-bin = []
