[package]
name = "sphere_directaudioengine"
version = "0.1.0"
edition = "2021"
description = "SphereDirectAudioEngine — native Rust audio backend for Futureboard Studio"

# ── Library target ───────────────────────────────────────────────────────────
#
# rlib:
#   Used by Futureboard Studio native / GPUI directly.
#
# cdylib:
#   Used when building the Electron / Node.js native addon.
#
# NOTE:
# Cargo cannot feature-gate crate-type directly, so this crate always declares
# both outputs. The actual N-API Rust code must still be guarded with:
#
#   #[cfg(feature = "napi")]
#
# so normal native workspace builds do not link against Node/N-API symbols.
license.workspace = true

[lib]
name = "DirectAudio"
crate-type = ["rlib", "cdylib"]

# ── Main native executable ───────────────────────────────────────────────────
# Output: SphereDirectAudioEngine.exe (explicit bin name; the package keeps its
# `sphere_directaudioengine` name so dependency references are unaffected).
[[bin]]
name = "SphereDirectAudioEngine"
path = "src/main.rs"

# ── CLI test harness ─────────────────────────────────────────────────────────
#
# Build manually with:
#
#   cargo run -p sphere_directaudioengine --bin sphere-audio-test --features audio-test-bin
#
[[bin]]
name = "sphere-audio-test"
path = "src/bin/sphere_audio_test.rs"
required-features = ["audio-test-bin"]

# ── Runtime dependencies ─────────────────────────────────────────────────────
[dependencies]
# N-API binding framework.
#
# Disabled by default so Futureboard Studio native does not link against
# Electron / Node.js symbols.
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }

# Cross-platform audio I/O:
#   Windows → WASAPI
#   macOS   → CoreAudio
#   Linux   → ALSA/JACK depending on CPAL backend availability
cpal.workspace = true

# Lock-free/control channel for UI/control thread → audio thread commands.
crossbeam-channel.workspace = true

# Faster mutexes with no poisoning behavior.
parking_lot.workspace = true

# Project snapshot / graph serialization.
serde.workspace = true
serde_json.workspace = true

# Plugin/audio graph integration.
sphere-audio-processor.workspace = true
sphere-audio-plugins.workspace = true
sphere-encoder.workspace = true
sphere-soundfont-player.workspace = true

# Memory-map large audio files so huge WAVs do not explode RAM usage.
memmap2.workspace = true

# Multi-format decoder: MP3, FLAC, OGG/Vorbis, WAV, AIFF, etc.
symphonia.workspace = true

# ── Windows-only: raw WASAPI exclusive mode + MMCSS ──────────────────────────
[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
# ASIO driver enumeration reads HKLM\SOFTWARE\ASIO instead of instantiating
# drivers (see src/asio_registry.rs).
windows-registry.workspace = true

# ── Build dependencies ───────────────────────────────────────────────────────
[build-dependencies]
# Required when building the N-API addon path.
#
# IMPORTANT:
# build.rs should only call napi_build setup when CARGO_FEATURE_NAPI is set.
napi-build.workspace = true

# Native helper build tooling.
cc.workspace = true
pkg-config.workspace = true

# ── Feature flags ────────────────────────────────────────────────────────────
[features]
# Default build is native/rlib-safe for Futureboard Studio.
default = []

# Enable Electron / Node.js native addon surface.
#
# Build example:
#   cargo build -p sphere_directaudioengine --features napi
napi = [
    "dep:napi",
    "dep:napi-derive",
]

# Enable local CLI test binary.
#
# Build example:
#   cargo run -p sphere_directaudioengine --bin sphere-audio-test --features audio-test-bin
audio-test-bin = []

# Compile the Windows ASIO duplex session (Exclusive Edition toolchain).
# This only compiles the code path — ASIO stays unusable until the edition
# provider registers a host factory after license verification.
asio = ["cpal/asio"]
