[package]
name = "apak"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
dirs.workspace = true
lzma-rs.workspace = true
pbkdf2.workspace = true
serde.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
