[package]
name = "sphere-plugin-host"
version = "0.1.0"
edition = "2021"
description = "SpherePluginHost — N-API control bridge and native plugin host shell for Futureboard Studio"

[lib]
name = "sphere_plugin_host"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "futureboard_plugin_scanner"
path = "src/bin/futureboard_plugin_scanner.rs"
required-features = ["plugin-scanner-bin"]

[dependencies]
napi        = { version = "2", features = ["napi4"], optional = true }
napi-derive = { version = "2", optional = true }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dirs        = "5"
rusqlite    = { version = "0.31", features = ["bundled"] }

[build-dependencies]
cc = "1"
napi-build = "2"

[features]
# Default build is native/rlib-safe for Studio workspace builds.
default = []

# Build the N-API surface (`*.node` addon entrypoints and Js-visible types).
napi = ["dep:napi", "dep:napi-derive"]

# Opt-in standalone scanner target. Workspace builds skip this so the binary
# does not try to link N-API symbols outside a Node/Electron host.
plugin-scanner-bin = []
